[BUGFIX] Made the contact form look better

--- a/style.css
+++ b/style.css
@@ -59,10 +59,10 @@ body	{font-size:13px}
                 #middle div.inset-square div.picture::after {content:"";display:block;position:absolute;top:0;left:0;bottom:0;right:0;box-shadow:inset .2em .1em .5em rgba(0,0,0,.25)}
             #middle div.inset-square p {margin-top:1.5em;color:#444}
                 #middle div.inset-square p a {text-decoration:underline;color:#888}
-    #middle form {}
-        #middle form textarea, #middle form input   {display:inline;width:40em;box-shadow:inset .1em .2em .5em #888;margin-bottom:1em;padding:1em;font-size:1em}
+    #middle form {margin-right:3.5em}
+        #middle form textarea, #middle form input   {display:inline-block;width:46em;box-shadow:inset .1em .2em .5em #888;margin-bottom:1em;padding:1em;font-size:1em;margin:.5em}
         #middle form textarea {height:8em}
-        #middle form input.submit {color:#CCC;background:#444;box-shadow:.1em .2em .5em #888;width:42em;position:relative;left:-1px}
+        #middle form input.submit {color:#CCC;background:#444;box-shadow:.1em .2em .5em #888;width:48em;position:relative;left:-1px}
         #middle form input.submit:hover {color:#EEE;background:#111}
         #middle form input.submit:active {font-weight:bold}
     
