[BUGFIX] General style: centering elements on the page

--- a/style.css
+++ b/style.css
@@ -52,14 +52,14 @@ body	{font-size:13px}
 #middle	{text-align:center;margin:8em auto;width:54em}
 
     #middle h2  {margin:1em 0;color:#888}
-        #middle div.inset-square {padding:1.5em;width:20em;height:28em;box-shadow:inset .2em .1em .5em #CCC;margin:1em;display:inline-block;float:left;background:#F4F8FC}
+        #middle div.inset-square {padding:1.5em;width:20em;height:28em;box-shadow:inset .2em .1em .5em #CCC;margin:1em;display:inline-block;float:left;background:#F4F8FC;position:relative;left:2em}
             #middle div.inset-square h3 {color:#000;padding:.5em 0 1.5em 0}
             #middle div.inset-square div.picture {height:12em;overflow:hidden}
                 #middle div.inset-square div.picture img {width:20em;position:relative}
                 #middle div.inset-square div.picture::after {content:"";display:block;position:absolute;top:0;left:0;bottom:0;right:0;box-shadow:inset .2em .1em .5em rgba(0,0,0,.25)}
             #middle div.inset-square p {margin-top:1.5em;color:#444}
                 #middle div.inset-square p a {text-decoration:underline;color:#888}
-    #middle form {margin-right:3.5em}
+    #middle form {}
         #middle form textarea, #middle form input   {display:inline-block;width:46em;box-shadow:inset .1em .2em .5em #888;margin-bottom:1em;padding:1em;font-size:1em;margin:.5em}
         #middle form textarea {height:8em}
         #middle form input.submit {color:#CCC;background:#444;box-shadow:.1em .2em .5em #888;width:48em;position:relative;left:-1px}
