--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body	{font-size:13px}
 
 #top {background:#EEE;padding:.5em 0 1em 0;text-align:center;box-shadow:0 .2em .75em rgba(0,0,0,0.25);position:fixed;width:100%;left:0;top:0;border-bottom:solid 1px #CCC;opacity:.97}
     #top *  {color:#444;text-shadow:0em .2em .2em rgba(0,0,0,.25)}
-    #top a {color:#000}
+    #top a {color:#000;position:relative}
     #top a:hover {color:#666}
+    #top a:active {color:#333;top:1px}
     #top .logo, #top .menu  {}
     #top .logo  {}
         #top .logo * {color:#888}
@@ -52,7 +53,7 @@ body	{font-size:13px}
 #middle	{text-align:center;margin:8em auto;width:54em}
 
     #middle h2  {margin:1em 0;color:#888}
-        #middle div.inset-square {padding:1.5em;width:20em;height:28em;box-shadow:inset .2em .1em .5em #CCC;margin:1em;display:inline-block;float:left;background:#F4F8FC;position:relative;left:2em}
+        #middle div.inset-square {padding:1.5em;width:20em;height:29em;box-shadow:inset .2em .1em .5em #CCC;margin:1em;display:inline-block;float:left;background:#F4F8FC;position:relative;left:2em}
             #middle div.inset-square h3 {color:#000;padding:.5em 0 1.5em 0}
             #middle div.inset-square div.picture {height:12em;overflow:hidden}
                 #middle div.inset-square div.picture img {width:20em;position:relative}
