--- a/style.css
+++ b/style.css
@@ -75,9 +75,11 @@ body	{font-size:13px}
 			
 			
 #bottom	{padding:2em 3em;box-shadow:inset 0 .25em .5em #888;color:#444;background:#EEE;opacity:.75;text-align:center}
+    #bottom p {margin:1em 0}
+        #bottom p a {color:#000}
     #bottom a.logo {margin-left:1.5em}
     #bottom a.logo:first-child {margin-right:0}
-        #bottom a.logo img {height:8em}
+        #bottom a.logo img {height:6em}
 		
 
 .windows	{position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(128,128,128,0.7);z-index:100000}
